
[package]
name = "tpluss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
axum = "0.4.4"
tiberius = { version = "0.7.1", features = ["chrono", "rust_decimal"] }
bb8 = "0.7.1"
async-trait = "0.1.52"
bb8-tiberius = "0.8.0"
tracing = "0.1.29"
tracing-subscriber = "0.3.6"
anyhow = "1.0.53"
serde = { version = "1.0.134", features = ["derive"] }
serde_json = "1.0.76"
chrono = { version = "0.4.19", features = ["serde"] }
crossbeam = "*"
crossbeam-channel = "*"
rusqlite = "0.24.2"
bb8-rusqlite = "0.1.0"